Realtime fix attempt #7